--- a/Epi.Web.SurveyAPI/Epi.Web.SurveyAPI.csproj
+++ b/Epi.Web.SurveyAPI/Epi.Web.SurveyAPI.csproj
@@ -408,6 +408,9 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Epi.Web.Model.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <Content Include="EF\Epi.Web.Model.edmx.diagram">
+      <DependentUpon>Epi.Web.Model.edmx</DependentUpon>
+    </Content>
     <None Include="Properties\PublishProfiles\SurveyAPI.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
@@ -420,7 +423,9 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
